--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "test": "node scripts/test-db.mjs"
+    "test": "node scripts/test-db.mjs",
+    "test:footprint": "rm -rf dist-footprint && tsc -p tsconfig.footprint.json && node dist-footprint/lib/footprint/aggregate.test.js"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.11",
