--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "eslint",
     "test": "node scripts/test-db.mjs",
-    "test:footprint": "rm -rf dist-footprint && tsc -p tsconfig.footprint.json && node dist-footprint/lib/footprint/aggregate.test.js"
+    "test:footprint": "node -e \"require('fs').rmSync('dist-footprint', { recursive: true, force: true });\" && tsc -p tsconfig.footprint.json && node dist-footprint/lib/footprint/aggregate.test.js"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.11",
