Fix nodemailer reset email delivery

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,6 @@ UPSTASH_REDIS_REST_TOKEN=
 NEXT_PUBLIC_TURNSTILE_SITE_KEY=
 TURNSTILE_SECRET_KEY=
 NEXT_PUBLIC_APP_URL=
-SMTP_HOST=
-SMTP_PORT=
-SMTP_USER=
-SMTP_PASS=
-SMTP_FROM=
-EMAIL_OVERRIDE_TO=
+NODEMAILER_EMAIL=
+NODEMAILER_PASSWORD=
+NODEMAILER_FROM=
