--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_REST_TOKEN=
 NEXT_PUBLIC_TURNSTILE_SITE_KEY=
 TURNSTILE_SECRET_KEY=
+NEXT_PUBLIC_APP_URL=
+NODEMAILER_EMAIL=
+NODEMAILER_PASSWORD=
+NODEMAILER_FROM=
