--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "openai": "^6.9.1",
     "recharts": "^2.15.4",
     "lightweight-charts": "4.2.0",
+    "echarts": "^5.5.1",
+    "echarts-for-react": "^3.0.2",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.66.1",
