--- a/services/probability-service/Dockerfile
+++ b/services/probability-service/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
+RUN addgroup --system appgroup && adduser --system --ingroup appgroup appuser
+
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
@@ -9,6 +11,8 @@ COPY app ./app
 COPY data ./data
 
 ENV OHLC_DATA_DIR=/app/data
+
+USER appuser
 
 EXPOSE 8000
 
