--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ services:
     healthCheckPath: /health
     envVars:
       - key: OHLC_DATA_DIR
-        value: services/probability-service/data
+        value: /app/data
       - key: LOG_LEVEL
         value: INFO
       - key: EWMA_LAMBDA
