Add waitlist flow and disable signup

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ NEXT_PUBLIC_APP_URL=
 NODEMAILER_EMAIL=
 NODEMAILER_PASSWORD=
 NODEMAILER_FROM=
+RESEND_API_KEY=
+WAITLIST_NOTIFY_TO=
+WAITLIST_FROM=
