Add BTC volatility IV surface model

--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.10",
     "openai": "^6.9.1",
+    "plotly.js": "^2.35.2",
     "recharts": "^2.15.4",
     "lightweight-charts": "4.2.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.66.1",
+    "react-plotly.js": "^2.6.0",
     "react-select-country-list": "^2.2.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
