--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "inngest": "^3.46.0",
     "lucide-react": "^0.554.0",
     "mongodb": "^7.0.0",
