--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-select-country-list": "^2.2.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "@supabase/supabase-js": "^2.45.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
