SQL Phase PR-2: supabase schema + retention automation

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+MODEL_CACHE_RETENTION_HOURS=
 NEXT_PUBLIC_APP_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 NEXT_PUBLIC_SUPABASE_URL=
@@ -5,7 +6,9 @@ NEXT_PUBLIC_TURNSTILE_SITE_KEY=
 NODEMAILER_EMAIL=
 NODEMAILER_FROM=
 NODEMAILER_PASSWORD=
+ORDERFLOW_RETENTION_HOURS=
 RESEND_API_KEY=
+RETENTION_BATCH_SIZE=
 SUPABASE_SERVICE_ROLE_KEY=
 SUPABASE_URL=
 TURNSTILE_SECRET_KEY=
