--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@tanstack/react-query": "^5.66.0",
     "@upstash/ratelimit": "^1.1.5",
     "@upstash/redis": "^1.34.0",
     "better-auth": "^1.4.1",
