Wire real stock profile data and live financials

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,5 @@
-NEXT_PUBLIC_APP_URL=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
-NEXT_PUBLIC_SUPABASE_URL=
-NEXT_PUBLIC_TURNSTILE_SITE_KEY=
-NODEMAILER_EMAIL=
-NODEMAILER_FROM=
-NODEMAILER_PASSWORD=
-RESEND_API_KEY=
-SUPABASE_SERVICE_ROLE_KEY=
-SUPABASE_URL=
-TURNSTILE_SECRET_KEY=
-UPSTASH_REDIS_REST_TOKEN=
-UPSTASH_REDIS_REST_URL=
-WAITLIST_FROM=
-WAITLIST_NOTIFY_TO=
+# Finnhub API key for stock profile data
+FINNHUB_API_KEY=
+
+# SEC user agent for filings (optional)
+SEC_USER_AGENT="Your Name your.email@example.com"
