--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "cmdk": "^1.1.1",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
+    "html-to-image": "^1.11.13",
     "inngest": "^3.46.0",
+    "lightweight-charts": "4.2.0",
     "lucide-react": "^0.554.0",
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.0",
@@ -36,13 +38,12 @@
     "nodemailer": "^7.0.10",
     "openai": "^6.9.1",
     "plotly.js": "^2.35.2",
-    "recharts": "^2.15.4",
-    "lightweight-charts": "4.2.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.66.1",
     "react-plotly.js": "^2.6.0",
     "react-select-country-list": "^2.2.3",
+    "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.12"
