--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.10",
     "openai": "^6.9.1",
+    "pdf-lib": "^1.17.1",
     "plotly.js": "^2.35.2",
     "react": "19.2.1",
     "react-dom": "19.2.1",
